# MGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  GLTemplate.sln  README.md  sys
GLTemplate/: AssetsLoader.cpp  AssetsLoader.h  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Debug.cpp  DirecitonalLight.h  EngineUtil.cpp  EngineUtil.h  FlybackCamera.cpp  FlybackCamera.h  FragmentShader.frag  FragmentShader2.frag  Framebuffer.h  GLTemplate.vcxproj  GLTemplate.vcxproj.filters  GLTemplate.vcxproj.nuget.dgspec.json  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  OBJLoader.h  PlaneMesh.cpp  PlaneMesh.h  (+29 more)
GLTemplate/Assets/Models/: Sphere.fbx  cube.fbx  cube_uv.fbx  rock6.fbx
GLTemplate/Assets/Shaders/: DepthMapShader.frag  DepthMapShader.vert  FragmentShader.frag  SkyShader.frag  SkyShader.vert  TriangleVertexShader.vert  VertexShader.vert  VertexShader2.vert  fs.frag
GLTemplate/Assets/Textures/: texture.DDS
GLTemplate/FBX/: fbxdocument.cpp
GLTemplate/include/: Asset_b.h  AssetsLoader.h  Camera.h  Debug.h  GameObject.h  Light.h  Shader.h  SystemInfo.h  Vector.h  Window.h
GLTemplate/lib/ImGui/misc/freetype/: imgui_freetype.cpp
GLTemplate/lib/glad/: glad.h
GLTemplate/src/: Asset.cpp  DirecitonalLight.cpp  Framebuffer.cpp  GameObject.cpp  Material.cpp  Model.cpp  Path.cpp  PostProcessing.cpp  ShadowMap.cpp  Sky.cpp  Texture.cpp  Util.cpp  Vector.cpp  Window.cpp  main.cpp
MGL/: AssetsLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Cube.h  Debug.cpp  DirecitonalLight.h  Framebuffer.cpp  GameObject.h  Input.cpp  Input.h  Light.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  Model.h  Path.cpp  Path.h  PointLight.h  SceneManager.cpp  SceneManager.h  Shader.cpp  ShadowMap.cpp  Sky.cpp  Sky.h  TimeUtils.cpp  Util.cpp  Util.h  Vector.cpp  Vector.h  Window.cpp  Window.h  imgui.ini  main.cpp
MGL/Assets/Models/: blender_cube.fbx  blender_teapot.fbx  plane.fbx  plane2.fbx  rock1.fbx  teapot1_01.FBX
MGL/Assets/Shaders/: BenchmarkShader.frag  BenchmarkShader.vert  DepthMapShader.frag  FragmentShader.frag  PP.frag  ShadowMapVertexShader.vert  SkyShader.frag  SkyShader.vert  SkyShader2.frag  SkyShader2.vert  VertexShader.vert
MGL/Assets/Textures/: tall_grass.xcf
MGL/Cameras/: FlybackCamera.h
MGL/UserScripts/: Benchmark.cpp  Benchmark.h  UserScript.cpp  UserScript.h
MGL/include/: Asset.h  AssetsLoader.h  Camera.h  GameObject.h  Mesh.h  Shader.h  ShadowMap.h  Util.h  Vector.h
MGL/include/Cameras/: FlybackCamera.h
MGL/lib/FBX/: fbxproperty.cpp
MGL/src/: AssetsLoader.cpp  Camera.cpp  EngineUtil.cpp  GameObject.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Model.cpp  PointLight.cpp  PostProcessing.cpp  Quaternion.cpp  Shader.cpp  ShadowMap.cpp  Sky.cpp  SystemInfo.cpp  Util.cpp  Window.cpp  main.cpp
MGL/src/Cameras/: FlybackCamera.cpp
MGLEditor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
glm/: CMakeLists.txt  glm.cpp  glm.h
